src/ludivine/assets/client.css
/* ... */
@media screen and (max-width: 960px) {
    .row {
        flex-direction: column;
        align-items: stretch;
    }
}

.profile > .avatar {
    width: 192px;
    height: 192px;
    margin: 0 auto;
    border-width: 6px;
}

@media screen and (max-width: 960px) {
    .profile { width: auto; }
}

.diary {
    display: flex;
    background: #f6d4c3;
    border-radius: 8px;
    padding: 0.5em;
    gap: 0.8em;
    align-items: center;

    & > img {
        width: 40px;
        height: 40px;
    }
    & > .text {
        flex: 1;
        width: 200px;
        line-height: 1.4;
    }
}

.studies {
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 1em;
}
.study {
    --background: var(--empty_color);

    display: flex;
    min-height: 6em;
    padding: 0.7em 1em;
    background: color-mix(in srgb, var(--background), transparent 60%);
    border-radius: 8px;
    gap: 2em;
    align-items: center;

    &.draft {
        --background: var(--draft_color);
        --button_color: var(--background);
    }
    &.done {
        --background: var(--done_color);
        --button_color: var(--background);
    }

    & > img { width: 100px; }
    & > .description {
        flex: 1;
        font-size: 0.9em;
        font-style: italic;
    }
    & > .progress {
        flex: 1;
        text-align: center;
        font-size: 0.9em;
        font-style: italic;
    }
}

@media screen and (max-width: 960px) {
    .study {
        padding-top: 1em;
        flex-wrap: wrap;
        justify-content: center;
        gap: 1em;

        & > .progress {
            flex: 0;
            margin-left: 1em;
            margin-right: 1em;
        }
        & > button {
            margin-right: 1em;
            margin-bottom: 0.5em;
        }
    }
}

.event {
    display: flex;
    background: #f6d4c3;
    border-radius: 8px;
    padding: 0.5em;
    gap: 0.8em;
    align-items: center;

    & > .text {
        flex: 1;
        width: 200px;
        padding-left: 0.5em;
        line-height: 1.4;
    }
    & > button {
        --button_color: #d9bf69;

        width: 3em;
        height: 3em;
        padding: 0 0.1em 0.2em 0.1em;
        border-radius: 6px;
    }
}

.calendars {
    display: flex;
    flex-wrap: wrap;
    gap: 24px;

    & img {
        width: 40px;
        height: 40px;
    }
}

.summary {
    display: flex;
    padding-right: 1em;
    background: var(--box_color);
    border-radius: 8px;
    gap: 1.5em;

    &.draft > .circle { --fill: var(--draft_color); }
    &.done > .circle { --fill: var(--done_color); }

    & > img {
        width: 240px;
        object-fit: cover;
        object-position: center top;
        background: #ecdbc3;
        border-top-left-radius: 8px;
        border-bottom-left-radius: 8px;
    }
    & > div {
        flex: 1;
        padding: 1em 0;
        overflow: hidden;
    }
    & > div > .title {
        margin-bottom: 1em;
        font-size: 1.2em;
        font-weight: bold;
        text-transform: uppercase;
        color: #364b9b;
    }
    & > .circle {
        align-self: center;
    }
}

@media screen and (max-width: 960px) {
    .summary > div > :not(.header) { display: none; }
}

.modules {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 1em;
}
.module {
    --color: white;

    display: flex;
    width: 120px;
    height: 120px;
    padding: 0.5em;
    flex-direction: column;
    gap: 0.15em;
    align-items: center;
    justify-content: center;
    background: color-mix(in srgb, var(--color), transparent 60%);
    border-radius: 8px;
    cursor: pointer;

    &.draft { --color: #d9bf69; }
    &.complete { --color: #eca17f; }
    &.disabled {
        filter: saturate(10%) brightness(80%);
        cursor: not-allowed;
    }

    & > .title {
        font-weight: bold;
        color: #364b9b;
        text-align: center;
    }
    & > .status {
        min-width: 70%;
        font-size: 0.9em;
        text-align: center;
    }
    &.draft > .status { font-weight: bold; }
}

.level {
    font-size: 1.1em;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    color: #364b9b;
    cursor: pointer;
}

.start {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    padding: 1em;
}

@media screen and (max-width: 960px) {
    .studies { flex-direction: column; }
    .study { width: 100%; }
}

.parts {
    --fill: var(--bar_color);
    --empty: var(--box_color);
    --rounding: 8px;

    height: 16px;
    border-radius: 50%;
}
.parts > span { display: none; }
/* ... */

